--- a/1_1/index.html
+++ b/1_1/index.html
@@ -15,7 +15,7 @@
         <li>Пункт 3</li>
     </ul>
     <p>Це <a href="https://www.example.com">посилання</a> на інший веб-сайт.</p>
-    <img src="./flower.jpg"  alt= "Приклад зображення" width="300git">
+    <img src="./flower.jpg"  alt= "Приклад зображення" width="300">
 
 </body>
 
