--- a/1_5/html5_example.html
+++ b/1_5/html5_example.html
@@ -6,28 +6,28 @@
 </head>
 <body>
   <header>
-    <h1>HTML5 приклад</h1>
+    <h1>Обирай українське!</h1>
   </header>
   <nav>
     <ul>
-      <li><a href="#section1">Розділ 1</a></li>
-      <li><a href="#section2">Розділ 2</a></li>
+      <li><a href="#section1">Українські народні казки</a></li>
+      <li><a href="#section2">Казки-мультики</a></li>
     </ul>
   </nav>
   <main>
     <section id="section1">
-      <h2>Розділ 1</h2>
-      <p>Тут є текст для першого розділу.</p>
+      <h2>Українські народні казки</h2>
+      <p>Українська народна казка існує вже не перше сторіччя і вирізняється серед іншої літератури своєю самобутністю та актуальністю навіть в сучасному світі.</p>
       <figure>
-        <img src="example_image.jpg" alt="Приклад зображення">
-        <figcaption>Підпис до зображення</figcaption>
+        <img src="./korjik.jpg" alt="Приклад зображення">
+        <figcaption>"Коржик" Українська народна казка</figcaption>
       </figure>
     </section>
     <section id="section2">
-      <h2>Розділ 2</h2>
-      <p>Тут є текст для другого розділу.</p>
+      <h2>Казки-мультики</h2>
+      <p> Жадiбний пес </p>
       <video controls>
-        <source src="example_video.mp4" type="video/mp4">
+        <source src="./Жадiбний пес _ Казки на ніч для дітей _ Казки українською мовою.mp4" type="video/mp4">
         Ваш браузер не підтримує відео.
       </video>
     </section>
@@ -52,9 +52,10 @@
 <section id="multimedia">
   <h2>Мультимедіа</h2>
   
-  <h3>Аудіо</h3>
+  <h3>Слухати</h3>
+  <p>Золота гуска</p>
   <audio controls>
-    <source src="example_audio.mp3" type="audio/mpeg">
+    <source src="./Золота_гуска.mp3" type="audio/mpeg">
     Ваш браузер не підтримує аудіо.
   </audio>
   
