--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="list-group-item row d-flex">
         <div class="col-sm-2 col-md-1">3.1</div>
         <div class="col-sm-6 col-md-8">CSS Фреймворки та Бібліотеки</div>
-        <div class="col-sm-4 col-md-3"><a href="#">https://katyaganchuk.github.io/web-practice-course/3_1/index.html</a></div>
+        <div class="col-sm-4 col-md-3"><a href="https://katyaganchuk.github.io/web-practice-course/3_1/index.html">Практичне завдання</a></div>
       </div>
       <div class="list-group-item row d-flex">
         <div class="col-sm-2 col-md-1">3.2</div>
